[package]
name = "rosu-mem"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
cfg-if = "1.0.0"
paste = "1.0.15"

[dev-dependencies]
rand = "0.8.5"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.25.0",  default-features = false,  features = ["uio", "process", "feature"] }

[target.'cfg(windows)'.dependencies]
windows = {version = "0.48", features = ["Win32_Foundation", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Threading", "Win32_System_Memory", "Win32_System_Diagnostics_Debug", "Win32_System_ProcessStatus"] }
