[package]
name = "rosu-mem"
version = "2.0.0"
edition = "2021"
description = "A memory reading library targeting osu!"
homepage = "https://github.com/486c/rosu-mem"
repository = "https://github.com/486c/rosu-mem"
keywords = ["osu"]
license = "MIT"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
cfg-if = "1.0.0"
paste = "1.0.15"
thiserror = "2.0.12"

[dev-dependencies]
rand = "0.8.5"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.25.0",  default-features = false,  features = ["uio", "process", "feature"] }

[target.'cfg(windows)'.dependencies]
windows = {version = "0.48", features = ["Win32_Foundation", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Threading", "Win32_System_Memory", "Win32_System_Diagnostics_Debug", "Win32_System_ProcessStatus"] }

[lints.clippy]
# Ignoring this clippy warning because of one edge case
# with `prim_read_array_impl(u8)`.
#
# std::slice::from_raw_parts_mut(..) expects
# to use element count (see docs) not bytes and in u8 case it becomes
# something like: 
# buff.len() * std::mem::size_of::<u8>()
# ^                  ^ always 1
# |
# valid length
# where valid length * 1 = valid_length
#
# So clippy thinks we passing bytes count not element count
size_of_in_element_count = "allow"
